# sf-optvm

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  arith.c  arith.h  array.c  array.h  ast.c  ast.h  bench.py  bytecode.c  bytecode.h  cl.c  cl.h  codegen.c  codegen.h  const.c  const.h  expr.c  expr.h  fun.c  fun.h  header.h  ht.c  ht.h  iter.c  iter.h  malloc.c  malloc.h  mod.c  mod.h  mut.c  mut.h  natives.c  natives.h  object.c  object.h  parser.c  parser.h  (+6 more)
test/: CMakeLists.txt  ifbranch.sf  mod.sf  test.c  test.sf
test/bench/: llist.sf  rangeexample.sf
